# guardians-of-compliance

./: README.md  app.py  pyproject.toml  report.md  requirements.txt
src/components/: circular_analyzer.py  elasticsearch_oper.py  fetch_pdf_content.py  fetch_rbi_links.py
