[project]
name = "compliance_agentic_ai"
version = "0.1.0"
description = "compliance-agentic-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
compliance_agentic_ai = "compliance_agentic_ai.main:run"
run_crew = "compliance_agentic_ai.main:run"
train = "compliance_agentic_ai.main:train"
replay = "compliance_agentic_ai.main:replay"
test = "compliance_agentic_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
